v0.4.0
  Switch from LibXML-Ruby to Nokogiri
  Update test suite to run on Ruby 1.9
  Add "<<" style writer to the DSL to provide for chaining outbound writes
  SRV lookup support

v0.3.4
  Remove unneeded functions from the push parser.
  Create a ParseWarning error that doesn't kill the stream.
  When a parse error comes in the reply should let the other side know it screwed up before dying.
  Add the LibXML::XML::Error node to the ParseError/ParseWarning objects.

v0.3.3
  Fix the load error related to not pushing Blather's dir into the load path

v0.3.2
  Switch the push parser from chunking to streaming.
  Don't push Blather's dir into the load paths

v0.3.1
  Small changes to the DSL due to handler collisions:
    "status" -> "set_status"
    "roster" -> "my_roster"
  Small changes to the Blather::Client API to keep it feeling more like EM's API:
    #stream_started -> #post_init
    #call -> #receive_data
    #stop -> #close
    #stopped -> #unbind
  Refactored some of the code internal to Blather::Client
  Added command line option handler to default use method (see README)
  require libxml-ruby >=1.1.2 (1.1.3 has an inconsistent malloc err on OS X 10.5)
  complete specs
  add single process ping-pong example

v0.3.0
  Remove autotest discover.rb (created all sorts of conflicts)
  Added Hash with Array guard
  Added a hirrarchy printer to examples directory
  Moved Disco to be in the Stanza namespace (staves off deeply namespaced classes)
  Namespaced the DSL methods to Blather::DSL. These can be included in any object you like now. "require 'blather/client'" will still include them directly in Kernel to keep the simple one-file dsl
  Stopped doing one class per error type. This created a giant hierarchy tree that was just unnecessary. The error name is now #name. Errors can be matched with a combination of handler and guard.