@@ -3,6 +3,7 @@ v0.4.0
   Update test suite to run on Ruby 1.9
   Add "<<" style writer to the DSL to provide for chaining outbound writes
   SRV lookup support
+  Add XPath type of handler guard
 
 v0.3.4
   Remove unneeded functions from the push parser.
